[package]
name = "dyn-prog"
version = "0.1.0"
authors = ["Adam Shimi <adam.shimi@toulouse-inp.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "big_grid_bench"
harness = false
