[package]
name = "tab-rl"
version = "0.1.0"
authors = ["Adam Shimi <adam.shimi@toulouse-inp.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "big_grid_bench"
harness = false
